# dynStruct

./: CMakeLists.txt  LICENSE.txt  README.md  build.sh  dynStruct.c  dynStruct.py  requirements.txt  todo
_dynStruct/: __init__.py  access.py  ajax.py  block.py  header.py  processing.py  save.py  struct.py  struct_member.py  utils.py  web_ui.py
_dynStruct/static/: index.html
_dynStruct/static/css/: header.css
_dynStruct/static/js/: jquery.dataTables.columnFilter.js
_dynStruct/views/: access_search.tpl  access_search_alone.tpl  access_search_iframe.tpl  block_search.tpl  block_view.tpl  edit_block_list.tpl  error.tpl  footer.tpl  header.tpl  header_iframe.tpl  index.tpl  member_create.tpl  member_search.tpl  member_view.tpl  quit.tpl  struct_create.tpl  struct_search.tpl  struct_select.tpl  struct_view.tpl
includes/: allocs.h  args.h  block_utils.h  call.h  custom_alloc.h  elf.h  out.h  out_json.h  process.h  rw.h  sym.h  tree.h  utils.h
src/: allocs.c  args.c  block_utils.c  block_utils.c~  call.c  custom_alloc.c  dynStruct.c  dynStruct.c~  elf.c  out.c  out_json.c  process.c  rw.c  sym.c  tree.c  utils.c
tests/: test.c
todo/: api_web_ui  future_work  future_work.md
